2001-02-14  Peter Stephenson  <pws@csr.com>

	* 13473: Makefile.in, Doc/Zsh/options.yo: small changes suggested
	in zsh-users/3524 for CSH_NULL_GLOB description and 13245 for
	cleaning config.modules.

2001-02-14  Clint Adams  <schizo@debian.org>

	* 13323: Functions/Zle/edit-command-line: handle
	multi-line buffers.

2001-02-02  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 13431: aczsh.m4,configure.in,Src/Modules/termcap.c,
	Src/Modules/termcap.mdd,Src/Modules/terminfo.c,
	Src/Modules/terminfo.mdd,Src/mkmakemod.sh: hopefully better
	check for shared libraries. Link in termcap/terminfo statically
	if shared libtermcap/libcurses unavailable

2001-02-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 13462: Src/Modules/zpty.c: try to make the -t option of zpty
 	smarter
	
	* 13459: Completion/Core/_path_files: wehn using glob_complete,
 	don't treat everything starting with a tilde as a pattern
	
2001-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 13457: Completion/Core/compinit: Add `glob' to $_comp_options.

2001-02-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 13450: Completion/Core/_multi_parts: two small fixes to
 	_multi_parts; one more place where a caller-supplied -S can be
 	used and fix for the code deciding which prefix to use
	
2001-02-08  Oliver Kiddle  <opk@zsh.org>

	* 13448: Completion/User/.distfiles, Completion/User/_tin,
	Completion/User/_netscape, Completion/User/_newsgroups:
	add newsgroup completion

	* 13445: Completion/User/_gzip: fix to work for zcat again

2001-02-07  Bart Schaefer  <schaefer@zsh.org>

	* 13442: Test/Makefile.in, Test/comptest: Run zsh with +Z to
	prevent ZLE modules from being loaded before $module_path is
	changed to point at the test installation.

	* 13439: Test/Makefile.in: "make test" cleans up after killed
	tests.

2001-02-02  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* unposted: Src/mkmakemod.sh: patterns in 13412 were wrong.

2001-02-02  Sven Wischnowsky  <wischnow@zsh.org>
